--- a/src/client/css/_global.scss
+++ b/src/client/css/_global.scss
@@ -1,7 +1,3 @@
-* {
-  transition: 0.3s all;
-}
-
 html,
 body,
 #app,
@@ -17,11 +13,9 @@ body,
 .main-area {
   background-color: $main-bg-color;
   flex: 1;
-}
-main {
   margin-top: $navbar-height-mobile;
   @media #{$medium-and-up} {
-    margin-top: $navbar-height;
+    margin-top: $navbar-height + $donate-header-height;
   }
 }
 body {
@@ -34,6 +28,8 @@ ul {
 .container {
   @media #{$large-and-up} {
     width: 85%;
+    max-width: $site-max-width;
+    min-width: $medium-screen-up - (2 * $header-padding);
   }
 }
 .small-container {
