--- a/src/client/css/_mixins.scss
+++ b/src/client/css/_mixins.scss
@@ -36,3 +36,19 @@
 @mixin z-depth-2 {
   box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.14), 0 6px 20px 0 rgba(0, 0, 0, 0.14);
 }
+
+@mixin z-depth-1-a {
+  box-shadow: 0 0 1px rgba(0,0,0,.11),0 1px 2px rgba(0,0,0,.22);
+}
+@mixin z-depth-2-a {
+ box-shadow: 0 0 2px rgba(0,0,0,.12), 0 2px 4px rgba(0,0,0,.24);
+}
+@mixin z-depth-3-a {
+  box-shadow: 0 0 4px rgba(0,0,0,.14),0 4px 8px rgba(0,0,0,.28);
+}
+@mixin z-depth-4-a {
+  box-shadow: 0 0 6px rgba(0,0,0,.16),0 6px 12px rgba(0,0,0,.32);
+}
+@mixin z-depth-1-a--top-line {
+ box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0,0,0,.12),0 2px 4px rgba(0,0,0,.24);
+}
