--- a/src/client/css/_navigation.scss
+++ b/src/client/css/_navigation.scss
@@ -1,76 +1,85 @@
 .navbar-fixed {
   @media #{$medium-and-up} {
-    margin-top: $donate-header-height;
-  }
-}
-nav {
-  background-color: $navbar-color;
-  ul a {
-    font-size: 1.1rem;
-    color: rgba(0, 0, 0, 0.83);
-    padding: 0 20px;
-    &:hover {
-      background-color: color('grey', 'lighten-3');
+    height: 0;
+    nav {
+      top: $donate-header-height;
     }
   }
-  .brand-logo {
-    color: color('blue', 'lighten-1');
-    @include site-logo;
-  }
-  .button-collapse i {
-    padding-left: 8px;
-    font-size: 2rem;
-    color: color('grey', 'lighten-1');
-    @media #{$medium-only} {
-      padding-left: 33px;
-    }
-  }
-  @media #{$medium-and-down} {
-    .side-nav > li > a {
-      font-weight: 700;
-    }
-    .drop-down-btn i {
-      display: none;
-    }
-    .drop-down a {
-      padding: 0 32px;
-      line-height: 36px;
-      height: 36px;
-    }
-  }
-  @media #{$large-and-up} {
-    padding-left: 30px;
-    padding-right: 15px;
-    .drop-down-btn {
-      &>a {
-        height: 64px;
-      }
-      i {
-        font-size: 1.5rem;
-        height: inherit;
-        line-height: inherit;
-        display: inline-block;
-        vertical-align: middle;
-      }
-      &:hover .drop-down {
-        display: block;
+  nav {
+    background-color: $navbar-color;
+    ul a {
+      font-size: 1.1rem;
+      color: rgba(0, 0, 0, 0.83);
+      padding: 0 $menu-padding;
+      &:hover {
+        background-color: color('grey', 'lighten-3');
       }
     }
-    .drop-down {
-      display: none;
-      line-height: 48px;
-      position: absolute;
-      min-width: 160px;
-      @include z-depth-1;
-      li {
-        float: none;
+    .brand-logo {
+      color: color('blue', 'lighten-1');
+      @include site-logo;
+      @media #{$large-and-up} {
+        padding-left: $menu-padding;
       }
-      a {
-        display: block;
-        color: $lighter-text;
-        background-color: $navbar-color;
-        &:hover {
-          background-color: color('grey', 'lighten-3');
+    }
+    .button-collapse i {
+      padding-left: 8px;
+      font-size: 2rem;
+      color: color('grey', 'lighten-1');
+      @media #{$medium-only} {
+        padding-left: 33px;
+      }
+    }
+    @media #{$medium-and-down} {
+      .side-nav > li > a {
+        font-weight: 700;
+      }
+      .drop-down-btn i {
+        display: none;
+      }
+      .drop-down a {
+        padding: 0 32px;
+        line-height: 36px;
+        height: 36px;
+      }
+    }
+    @media #{$large-and-up} {
+      padding: 0 ($header-padding - $menu-padding);
+      .nav-wrapper {
+        max-width: $site-max-width + (2 * $menu-padding);
+        margin: 0 auto;
+      }
+      .drop-down-btn {
+        &>a {
+          height: 64px;
+        }
+        i {
+          font-size: 1.5rem;
+          height: inherit;
+          line-height: inherit;
+          display: inline-block;
+          vertical-align: middle;
+        }
+        &:hover .drop-down {
+          display: block;
+        }
+      }
+      .drop-down {
+        display: none;
+        line-height: 48px;
+        position: absolute;
+        min-width: 160px;
+        @include z-depth-1;
+        li {
+          float: none;
+        }
+        a {
+          display: block;
+          color: $lighter-text;
+          background-color: $navbar-color;
+          &:hover {
+            background-color: color('grey', 'lighten-3');
+          }
         }
       }
     }
