--- a/src/client/css/_variables.scss
+++ b/src/client/css/_variables.scss
@@ -1,4 +1,7 @@
-// Header heights
+// Heights & widths
+$site-max-width: 1400px;
+$header-padding: 35px;
+$menu-padding: 17px;
 $donate-header-height: 46px;
 $navbar-height: 64px;
 $navbar-height-mobile: 56px;
